--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,5 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: estysdesu/jupyter-stack
-          tag_with_ref: true
+          tag_with_sha: true
           #build_args: # optional
