--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,12 @@ on:
 
 jobs:
   build-push:
+    name: Build and push Docker image
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v2
-      - name: Build and push Docker images
+      - name: Build and push Docker image
         uses: docker/build-push-action@v1.1.0
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -20,3 +21,16 @@ jobs:
           repository: estysdesu/jupyter-stack
           tag_with_sha: true
           #build_args: # optional
+
+  test:
+    name: Build and test Docker image
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@2
+      - name: Build Docker image
+        run: docker build -t $GITHUB_ACTOR/$GITHUB_REPOSITORY:latest
+      - name: Install testing requirements
+        run: python -m pip install -r requirements-test.txt
+      - name: Test
+        run: python -m pytest tests
