--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,4 @@ jobs:
       - name: Install testing requirements
         run: python -m pip install -r requirements-test.txt
       - name: Test
-        run: python -m pytest tests
+        run: python -m pytest --ignore=tests/test_packages.py tests
