--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Build Docker image
         run: docker build -t $GITHUB_ACTOR/$GITHUB_REPOSITORY:latest .
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
       - name: Install testing requirements
         run: python -m pip install -r requirements-test.txt
       - name: Test
